--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,9 +2,9 @@ PORT=4000
 
 DB_URL="mongodb://localhost:27017/Test"
 
-EMAIL='nodemailer3080@gmail.com'
+EMAIL='anyemailid@gmail.com'
 
-EMAIL_PASS='<jx4z:&*^q5<dDB)'
+EMAIL_PASS='user password'
 
 TOKEN_KEY='sad$%fghu%6HJGFJH$&87'
 
